fix for margin collapse

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,5 +2,6 @@
 
 .layout-main {
   background-color: $white;
+  overflow: hidden; /* fix for margin collapse */
 }
 
